--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: ginitd
 description: This includes information about ginitd and various other projects of mine.
-theme: jekyll-theme-primer
+theme: jekyll-theme-leap-day
 show_downloads: false
